--- a/date/2025-03/page-3.htm
+++ b/date/2025-03/page-3.htm
@@ -296,8 +296,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-10-free-high-speed-nodes.htm">3月10日更新20.2M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、美国、韩国、欧洲、加拿大、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-93047.htm">Spring的两种依赖注入方式:setter方法注入与构造方法注入</a></h4>
+                <p>&nbsp; &nbsp;Spring的两种依赖注入方式：setter注入与构造方法注入，这两种方法的不同主要就是在xml文件下对应使用property和constructor-arg属性， 例如： </p>
             </div>
         </div>
     </div>
@@ -306,8 +306,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-94562.htm">中文时间日期解析错误-UnicodeEncodeError: &#8216;locale&#8217; codec can&#8217;t encode character &#8216;\u5e74&#8217; in position 2: Illegal</a></h4>
-                <p>参考：https://segmentfault.com/q/1010000003070325 &nbsp; &nbsp; &nbsp; &nbsp;word = (datetime.today() +</p>
+                <h4><a href="/free-nodes/2025-3-12-free-subscribe-node.htm">3月12日更新20.9M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、香港、欧洲、韩国、新加坡、加拿大、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -316,8 +316,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-9-free-clash-subscribe.htm">3月9日更新18.9M/S，2025年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、日本、欧洲、美国、香港等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-75287.htm">北京宠物医院前十名一朝阳区宠爱医院（北京朝阳区宠物医院哪个好）</a></h4>
+                <p>摘要：       今天给各位分享北京宠物医院前十名一朝阳区宠爱医院的知识，其中也会对北京朝阳区宠物医院哪个好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
             </div>
         </div>
     </div>
@@ -326,8 +326,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-96821.htm">C++ 类成员指针</a></h4>
-                <p>C++的类成员指针是一种奇葩的指针。 假设现在我们要表示一个三维的点，现在有两种定义方式： struct point1{ 	int x, y, z; };  struct point2{ 	int c</p>
+                <h4><a href="/news/article-87163.htm">Java ArrayList集合(Java动态数组)</a></h4>
+                <p>Java ArrayList集合（Java动态数组）  一、ArrayList集合的概述和基本使用   1.概述 2.基本使用   二、ArrayList集合的详细介绍   1.定义一个ArrayLi</p>
             </div>
         </div>
     </div>
@@ -336,8 +336,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-80772.htm">十大冷门暴利生意(最挣钱没人干的行业有哪些?)（冷门生意有哪些十大冷门生意利润高）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈十大冷门暴利生意(最挣钱没人干的行业有哪些?)，以及冷门生意有哪些十大冷门生意利润高对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、有..</p>
+                <h4><a href="/news/article-69329.htm">24小时宠物医院咨询电话临平（临平宠物店）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈24小时宠物医院咨询电话临平，以及临平宠物店对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物医生怎么咨询.2、...        本</p>
             </div>
         </div>
     </div>
@@ -346,8 +346,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-73944.htm">长沙领养宠物猫在哪里领（长沙领养宠物猫在哪里领养）</a></h4>
-                <p>摘要：       今天给各位分享长沙领养宠物猫在哪里领的知识，其中也会对长沙领养宠物猫在哪里领养进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、在哪里可以领.</p>
+                <h4><a href="/free-nodes/2025-3-4-shadowrocket-node.htm">3月4日更新22.1M/S，2025年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、欧洲、美国、加拿大、韩国、新加坡等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -356,8 +356,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-11-clash-node-daily-updates.htm">4月11日更新21.7M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、日本、韩国、欧洲、美国、新加坡、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-73268.htm">宠物疫苗自己打可以吗（宠物疫苗自己打可以吗现在）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈宠物疫苗自己打可以吗，以及宠物疫苗自己打可以吗现在对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、可以自己给狗打疫苗吗2、...     </p>
             </div>
         </div>
     </div>
@@ -366,8 +366,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-13-free-node-subscribe.htm">4月13日更新19.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、欧洲、香港、加拿大、韩国、美国、新加坡等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-96820.htm">Java中Scanner的方法</a></h4>
+                <p>JavaScanner的next与nextLine方法  1. 前言 在Scanner类中 有许多的方法 常用的有 nextInt()、nextFloat()、nextDouble()、next()、</p>
             </div>
         </div>
     </div>
@@ -376,8 +376,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-85008.htm">制作狗粮机器多少钱一套（自制狗粮机）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈制作狗粮机器多少钱一套，以及自制狗粮机对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、火腿肠加工机器多少钱2、...        本篇文</p>
+                <h4><a href="/news/article-91573.htm">成都动物疫苗接种点 成都动物疫苗接种点查询</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于成都动物疫苗接种点的问题，于是小编就整理了3个相关介绍成都动物疫苗接种点的解答，让我们一起看看吧。成都哪有给宠物办理检疫证的地方</p>
             </div>
         </div>
     </div>
@@ -386,8 +386,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-17-free-node-subscribe.htm">3月17日更新20.7M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了新加坡、香港、美国、欧洲、日本、韩国、加拿大等地区,最高速度可达20.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-87888.htm">成都宠物领养中心官网（成都宠物领养中心在哪）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈成都宠物领养中心官网，以及成都宠物领养中心在哪对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、启明小动物保护中心请问你们中心的具体地址..</p>
             </div>
         </div>
     </div>
@@ -398,7 +398,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">43</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
