--- a/date/2025-03/page-8.htm
+++ b/date/2025-03/page-8.htm
@@ -296,8 +296,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-79379.htm">mysql5.7自动创建分区</a></h4>
-                <p>实现了下自动按月表分区，开发环境为Mysql 5.7.28 核心的两个存储过程： auto_create_partition为创建表分区，调用后为该表创建到下月结束的表分区。 auto_del_par</p>
+                <h4><a href="/news/article-93047.htm">Spring的两种依赖注入方式:setter方法注入与构造方法注入</a></h4>
+                <p>&nbsp; &nbsp;Spring的两种依赖注入方式：setter注入与构造方法注入，这两种方法的不同主要就是在xml文件下对应使用property和constructor-arg属性， 例如： </p>
             </div>
         </div>
     </div>
@@ -306,8 +306,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-73267.htm">孕妇被猫抓伤出一丝丝血要***吗（孕妇被猫抓伤出一丝丝血要***吗有影响吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈孕妇被猫抓伤出一丝丝血要打针吗，以及孕妇被猫抓伤出一丝丝血要打针吗有影响吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、孕妇被小猫抓..</p>
+                <h4><a href="/news/article-85729.htm">长沙宠物领养贴吧 长沙宠物领养贴吧论坛</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于长沙宠物领养贴吧的问题，于是小编就整理了4个相关介绍长沙宠物领养贴吧的解答，让我们一起看看吧。请问长沙有没有收留藏獒的地方？长沙</p>
             </div>
         </div>
     </div>
@@ -316,8 +316,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-71945.htm">宠物粮厂家招聘最新信息（宠物粮基地）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物粮厂家招聘最新信息，以及宠物粮基地对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、浙江宠物干粮生产厂家哪家好...        本篇</p>
+                <h4><a href="/news/article-78693.htm">动物疫控中心可以打疫苗吗多少钱（动物防疫中心可以打疫苗吗）</a></h4>
+                <p>摘要：       今天给各位分享动物疫控中心可以打疫苗吗多少钱的知识，其中也会对动物防疫中心可以打疫苗吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、给狗.</p>
             </div>
         </div>
     </div>
@@ -326,8 +326,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-66141.htm">生产狗粮利润大吗（狗粮生产赚钱吗）</a></h4>
-                <p>摘要：       今天给各位分享生产狗粮利润大吗的知识，其中也会对狗粮生产赚钱吗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、开个狗粮加工厂挣钱吗...  </p>
+                <h4><a href="/free-nodes/2025-4-7-free-v2ray-subscribe.htm">4月7日更新22.4M/S，2025年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、加拿大、新加坡、香港、美国、欧洲、韩国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -336,8 +336,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-75966.htm">违约养宠物还能退押金吗怎么处理（宠物店押金不退可以报警吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈违约养宠物还能退押金吗怎么处理，以及宠物店押金不退可以报警吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、领养宠物押金一年返还套路怎..</p>
+                <h4><a href="/free-nodes/2025-3-30-free-shadowrocket-node.htm">3月30日更新19.7M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、美国、韩国、加拿大、欧洲、日本等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -346,8 +346,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-66770.htm">Nuxt3 rc.11 填坑 配置 element-plus</a></h4>
-                <p>网上各种版本都有，就是都不太行，不太完整。 先看下package.json {   "private": true,   "scripts": {     "build": "nuxt build",</p>
+                <h4><a href="/news/article-70634.htm">深圳市领养宠物中心地址（深圳市领养宠物中心地址电话）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈深圳市领养宠物中心地址，以及深圳市领养宠物中心地址电话对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、深圳最大的宠物寄养中心在哪...  </p>
             </div>
         </div>
     </div>
@@ -356,8 +356,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-90080.htm">微服务nacos简单部署+网关设置+日志管理</a></h4>
-                <p>1.nacos简单部署 2.网关设置 3日志管理.   nacos引用的主要依赖是然后在配置文件进行注册（需要提前启动nacos插件，默认密码都是nacos）       &lt;dependency</p>
+                <h4><a href="/news/article-82152.htm">领养宠物用什么软件（领养宠物去什么平台比较好）</a></h4>
+                <p>摘要：       今天给各位分享领养宠物用什么软件的知识，其中也会对领养宠物去什么平台比较好进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、如何在新版QQ空.</p>
             </div>
         </div>
     </div>
@@ -366,8 +366,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-27-free-high-speed-nodes.htm">3月27日更新19.5M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、欧洲、香港、日本、新加坡、加拿大等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-68038.htm">动物疫苗的生产及检验 动物疫苗的生产及检验方法</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗的生产及检验的问题，于是小编就整理了3个相关介绍动物疫苗的生产及检验的解答，让我们一起看看吧。动物检疫合格证明需要查什么</p>
             </div>
         </div>
     </div>
@@ -376,8 +376,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-93048.htm">宠物品牌起名字大全（宠物品牌介绍）</a></h4>
-                <p>摘要：       今天给各位分享宠物品牌起名字大全的知识，其中也会对宠物品牌介绍进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物店取什么名字好...   </p>
+                <h4><a href="/news/article-85008.htm">制作狗粮机器多少钱一套（自制狗粮机）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈制作狗粮机器多少钱一套，以及自制狗粮机对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、火腿肠加工机器多少钱2、...        本篇文</p>
             </div>
         </div>
     </div>
@@ -386,8 +386,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-80772.htm">十大冷门暴利生意(最挣钱没人干的行业有哪些?)（冷门生意有哪些十大冷门生意利润高）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈十大冷门暴利生意(最挣钱没人干的行业有哪些?)，以及冷门生意有哪些十大冷门生意利润高对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、有..</p>
+                <h4><a href="/news/article-68681.htm">猫咪三针多久打完（猫咪三针多久打完有效）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈猫咪三针多久打完，以及猫咪三针多久打完有效对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫打的三针疫苗是什么2、...        本</p>
             </div>
         </div>
     </div>
@@ -398,7 +398,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">43</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
