--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -114,6 +114,57 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2025-03-24">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-3-24-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/63b3d8b1b5bf3bf70ae5148a3b7448cf.webp" alt="3月24日更新21M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-3-24-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">3月24日更新21M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了新加坡、香港、日本、欧洲、加拿大、韩国、美国等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                3月24日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-03-23">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-3-23-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/02304af5d6ae5c5ec3e37e4b96cee2ef.webp" alt="3月23日更新19.5M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-3-23-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">3月23日更新19.5M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了加拿大、日本、韩国、美国、欧洲、香港、新加坡等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                3月23日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-03-22">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-3-22-free-clash.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/d407d00f6f64c9e8c53ebfcd676b4e55.webp" alt="3月22日更新20.6M/S，2025年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-3-22-free-clash.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">3月22日更新20.6M/S，2025年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了新加坡、香港、美国、欧洲、加拿大、日本、韩国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                3月22日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2025-03-21">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -233,102 +284,11 @@
                                 3月14日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-03-13">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5620e7c3d4d3be48971add45a3c753f0.webp" alt="3月13日更新18.5M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">3月13日更新18.5M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了美国、韩国、欧洲、香港、新加坡、加拿大、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                3月13日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-03-12">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-3-12-free-subscribe-node.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/5764f68424815c2ef26e500bb67a21d1.webp" alt="3月12日更新20.9M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-3-12-free-subscribe-node.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">3月12日更新20.9M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了美国、香港、欧洲、韩国、新加坡、加拿大、日本等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                3月12日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-03-11">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-3-11-clash-windows.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/80e1ae8826f43c44269c88a9b207db4c.webp" alt="3月11日更新22.7M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-3-11-clash-windows.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">3月11日更新22.7M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了美国、韩国、日本、香港、加拿大、欧洲、新加坡等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                3月11日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
-                <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            </div>
+                <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            </div>
             <div class="col-md-4 w3l-services">
                 <h3 class="title-big mb-sm-3 mb-3">热门文章</h3>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-73944.htm">长沙领养宠物猫在哪里领（长沙领养宠物猫在哪里领养）</a></h4>
-                <p>摘要：       今天给各位分享长沙领养宠物猫在哪里领的知识，其中也会对长沙领养宠物猫在哪里领养进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、在哪里可以领.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-92322.htm">关于Mina中IoBuffer与Java NIO中ByteBufferde的使用</a></h4>
-                <p>项目中大量的使用&nbsp;NIO&nbsp;和&nbsp;Mina，虽然之前一直对这部分比较关注，但是还没有好好的总结一下这方面的内容，本节内容介绍一下NIO&nbsp;里最基本的一个类&nbsp;</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-79379.htm">mysql5.7自动创建分区</a></h4>
-                <p>实现了下自动按月表分区，开发环境为Mysql 5.7.28 核心的两个存储过程： auto_create_partition为创建表分区，调用后为该表创建到下月结束的表分区。 auto_del_par</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-69976.htm">go语言panic函数详解</a></h4>
-                <p>程序异常被叫做panic，直译为运行时恐慌 当panic被抛出异常后，如果我们没有在程序中添加任何保护措施的话，程序就会打印出panic的详细情况之后，终止运行  panic: runtime err</p>
-            </div>
-        </div>
-    </div>
-</div>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
@@ -343,8 +303,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-78005.htm">原生实现C#和Lua相互调用-Unity3D可用</a></h4>
-                <p>引言 &nbsp;&nbsp;&nbsp;&nbsp;本篇简单介绍如何在C#中执行Lua脚本，传递数据到Lua中使用，以及Lua中调用C#导出的方法等。在Unity中开发测试，并打IL2CPP的And</p>
+                <h4><a href="/news/article-74611.htm">Linux中信号量源码的详细解析</a></h4>
+                <p>如果一个任务获取信号量失败，该任务就必须等待，直到其他任务释放信号量。本文的重点是，在Linux中，当有任务释放信号量之后，如何唤醒正在等待该信号量的任务。 信号量定义如下： struct semap</p>
             </div>
         </div>
     </div>
@@ -353,8 +313,58 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-80771.htm">STL之vector</a></h4>
-                <p>目录 vector概念 vector的遍历 1、[ ]的重载 2、迭代器 3、范围for vector的模拟实现 成员变量 reserve函数与拷贝构造 增删函数 push_back pop_back</p>
+                <h4><a href="/free-nodes/2025-4-7-free-v2ray-subscribe.htm">4月7日更新22.4M/S，2025年最新高速Shadowrocket/V2ray/Clash/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、加拿大、新加坡、香港、美国、欧洲、韩国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-3-13-clash-v2ray-ss-ssr.htm">3月13日更新18.5M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、欧洲、香港、新加坡、加拿大、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-3-9-free-clash-subscribe.htm">3月9日更新18.9M/S，2025年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、新加坡、加拿大、日本、欧洲、美国、香港等地区,最高速度可达18.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-3-10-free-high-speed-nodes.htm">3月10日更新20.2M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、美国、韩国、欧洲、加拿大、新加坡等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-96083.htm">天宫院附近宠物医院有哪些（天宫院附近有什么好玩的）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈天宫院附近宠物医院有哪些，以及天宫院附近有什么好玩的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、常州宠物医院2、...        </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-88623.htm">windows下安装redis_在线工具</a></h4>
+                <p>一、安装redis 下载地址： https://github.com/MicrosoftArchive/redis/releases Redis 支持 32 位和 64 位。这个需要根据你系统平台的实</p>
             </div>
         </div>
     </div>
@@ -373,18 +383,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-3-27-free-high-speed-nodes.htm">3月27日更新19.5M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、欧洲、香港、日本、新加坡、加拿大等地区,最高速度可达19.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-89339.htm">动物疫苗使用方法（动物疫苗接种方法有哪些）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗使用方法，以及动物疫苗接种方法有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗狗疫苗怎么打2、...        本篇文</p>
+                <h4><a href="/free-nodes/2025-4-14-free-clash-subscribe.htm">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -395,7 +395,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">43</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
+                                <h4><span class="badge" style="float: right;">54</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                                 <h4><span class="badge" style="float: right;">85</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                             </div>
         </div>
